Fix scroll bar hidden by fixed header

--- a/src/pages/App/App.module.scss
+++ b/src/pages/App/App.module.scss
@@ -2,4 +2,5 @@
   height: 600px;
   width: 400px;
   background-color: var(--background);
+  overflow: hidden;
 }
